--- a/docs/games/g1.md
+++ b/docs/games/g1.md
@@ -1,7 +1,7 @@
-# g1
+# Test
 
-## 11111111
+<script setup>
+import GamesTestGame from '../.vitepress/components/games/test-game.vue'
+</script>
 
-sdfsdf
-
-### 3333;
+<GamesTestGame/> 
